# c3cpp

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
c3cpp/: CMakeLists.txt  Makefile  approx_opts.cpp  approx_opts.h  c3_cpp.h  core.h  function_train.cpp  function_train.h  functions.cpp  functions.h  optimize.cpp  optimize.h  sobol.cpp  sobol.h  utils.cpp  utils.h
examples/: CMakeLists.txt
examples/ft_cross_adapt/: CMakeLists.txt  main.cpp
examples/sobol_indices/: CMakeLists.txt  main.cpp
test/: Makefile  main.cpp
